foundation_cms/static/scss/components/newsletter_signup/newsletter_signup_form.scss
@import "../../colors";

.newsletter-signup {
  background-color: color(orange, "100");
  border-top-right-radius: 1rem;
  border-bottom-left-radius: 1rem;
  padding: 2.5rem 1rem 2rem;
  margin-bottom: 2rem;
  position: relative;

  @include breakpoint(medium up) {
    margin-top: 3rem;
    border-top-right-radius: 1.5rem;
    border-bottom-left-radius: 2rem;
    padding: 1.5rem 2rem 1.75rem;
  }

  @include breakpoint(xlarge up) {
    display: flex;
    flex-direction: row;
    gap: 1rem;
    padding: 1rem 5rem;
    align-items: start;
  }

  &::before {
    display: block;
    content: "";
    position: absolute;
    top: -1rem;
    left: 2rem;
    width: rem-calc(51px);
    height: rem-calc(44px);
    background-image: url("../_images/handdrawn/rays-newsletter-signup.svg");
    background-size: 100% auto;
    background-position: center;
    background-repeat: no-repeat;

    @include breakpoint(medium up) {
      top: -2rem;
    }

    @include breakpoint(xlarge up) {
      position: relative;
      top: 0;
      left: 0;
      flex-shrink: 0;
      min-height: rem-calc(58);
    }
  }

  &__link {
    color: inherit;
    text-decoration: none;
  }

  &__form {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;

    &--hidden {
      display: none;
    }

    @include breakpoint(xlarge up) {
      flex-direction: row;
      align-items: start;
      flex: 1;
      gap: 1rem;
    }
  }

  &__form-grid {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;

    @include breakpoint(medium up) {
      flex-direction: row;
    }

    @include breakpoint(xlarge up) {
      flex: 1;
    }
  }

  &__cta {
    @include mofo-text-style($header-styles, "h6", $header-font-family);

    margin: 0 0 0.5rem;

    @include breakpoint(medium up) {
      font-size: rem-calc(20);
    }

    @include breakpoint(xlarge up) {
      margin-top: 1rem;
    }
  }

  &__fieldset {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;

    @include breakpoint(medium up) {
      flex: 1;
    }

    @include breakpoint(xlarge up) {
      min-width: 17rem;
    }
  }

  &__input {
    background: $white;
    border: 1px solid $white;
    border-radius: 0;
    width: 100%;
    padding: 1rem 1.25rem;
    line-height: 150%;

    &::placeholder {
      color: $black;
    }

    &:hover {
      border: 1px solid color(neutral, "600");
    }

    &:focus-visible {
      outline: none;
      border: 1px solid color(neutral, "600");
    }
  }

  select.newsletter-signup__input {
    appearance: none;
    background-image: url("../_images/icons/select-caret-down-black.svg");
    background-repeat: no-repeat;
    background-position: right 1rem center;
    padding-right: 3rem;

    option {
      color: color(neutral, "600");
    }
  }

  &__button {
    margin: 0;
    width: 100%;
    line-height: 150%;
    text-wrap: nowrap;

    &:focus-visible {
      outline: 2px solid $white;
    }
  }

  &__field {
    &--hidden {
      display: none;
    }

    label {
      @include mofo-text-style($body-text-styles, "xsmall");

      display: flex;
      align-items: center;
      gap: 0.75rem;
      cursor: pointer;

      input[type="checkbox"] {
        appearance: none;
        flex-shrink: 0;
        width: 1.5rem;
        height: 1.5rem;
        display: inline-block;
        position: relative;
        background-color: $white;

        &:checked {
          background-image: url("../_images/icons/checkbox-stripe-black.svg");
          background-repeat: no-repeat;
          background-position: center;
          background-size: 1.25rem auto;
        }

        &:hover {
          border: 1px solid color(neutral, "600");
          box-shadow: 1px 1px 0 0 color(neutral, "600");
        }
      }
    }
  }

  &__field-error {
    @include mofo-text-style($body-text-styles, "xsmall");

    color: color(orange, "600");
    margin-top: 0.5rem;
    background-color: color(neutral, "100");
    background-image: url("../_images/icons/input-feedback-error.svg");
    background-size: 0.75rem auto;
    background-position: 0.75rem center;
    background-repeat: no-repeat;
    display: inline-flex;
    align-items: center;
    padding: 0.5rem 1rem 0.5rem 2rem;
    line-height: 150%;

    &--hidden {
      display: none;
    }
  }

  &__error-message {
    color: red;
    margin-bottom: 1rem;

    &--hidden {
      display: none;
    }
  }

  &__success-message {
    &--hidden {
      display: none;
    }

    .newsletter-siginup__success-title {
      margin-top: 0.75rem;
      margin-bottom: 0.5rem;
      font-weight: 700;
    }

    p {
      @include mofo-text-style($body-text-styles, "small");

      margin-bottom: 0.5rem;

      @include breakpoint(medium up) {
        @include mofo-text-style($body-text-styles, "regular");

        margin-right: 9rem;
      }
    }
  }
}

